<resources>
    <string name="app_name">Calma</string>
    <string name="buttonText">Yeah</string>
    <string name="start">Press flower to start</string>
    <string name="play">play</string>
    <string name="todo">TODO</string>
    <string name="none">None</string>
    <string name="deep_relaxation">Deep relaxation</string>
    <string name="set">Set</string>
    <string name="_4_7_8_4_nhelps_to_relax">4-7-8-4\nHelps to relax.</string>
    <string name="custom">Custom</string>
    <string name="inhale">Inhale</string>
    <string name="hold">Hold</string>
    <string name="exhale">Exhale</string>
    <string name="loops">Loops</string>
    <string name="boxed">Boxed</string>
    <string name="_4_4_4_4_nhelps_to_calm_down">4-4-4-4\nHelps to calm\ndown.</string>
    <string name="gotosettings">goToSettings</string>
    <string name="alternating">Alternating</string>
    <string name="_5_0_5_4_nhelps_to_replenish_noxygen">5-0-5-4\nHelps to replenish\noxygen.</string>
    <string name="inhale_indi">: Inhale</string>
    <string name="hold_inde">: Hold</string>
    <string name="exhale_indi">: Exhale</string>
    <string name="count_nloops">Count\nloops:</string>
    <string name="finish">Finish</string>
    <string name="end">END</string>
</resources>